# gen-csv

./: .gitignore  Makefile  gen_obsidian_link.py  main.py  pyproject.toml  row.py
gen_csv/: main.py
get_gzip_isize/: main.py
